force-app/main/default/objects/Batch__c/Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <label>Batch Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>