force-app/main/default/objects/Batch__c/fields/Batch_AutoNum__c.field-meta.xml
<CustomField>
    <fullName>Batch_AutoNum__c</fullName>
    <displayFormat>B-{000}</displayFormat>
    <label>Batch AutoNum</label>
    <type>AutoNumber</type>
</CustomField>