force-app/main/default/objects/Batch__c/fields/Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Batch_Code__c</fullName>
    <formula>&quot;IC&quot; + RIGHT( ( LEFT( TEXT( Year__c ) , 4)) , 2) + &quot;-&quot;  +  RIGHT( TEXT( Year__c ) , 2) + &quot;-&quot; +  TEXT( Quarter__c )  +  &quot;-&quot; +  Course__r.Course_Code__c  + LEFT(TEXT(  Batch_Type__c ),1) + RIGHT( Batch_AutoNum__c , 3) + &quot;-&quot; + RIGHT( TEXT(Batch_Timing__c ) , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Code</label>
    <type>Text</type>
</CustomField>