force-app/main/default/objects/Batch__c/fields/Batch_Description__c.field-meta.xml
<CustomField>
    <fullName>Batch_Description__c</fullName>
    <label>Batch Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>