force-app/main/default/objects/Batch__c/fields/Batch_Timing__c.field-meta.xml
<CustomField>
    <fullName>Batch_Timing__c</fullName>
    <label>Batch Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekends Morning-WEM</fullName>
            </value>
            <value>
                <fullName>Weekends Evening-WEE</fullName>
            </value>
            <value>
                <fullName>Weekdays Morning-WDM</fullName>
            </value>
            <value>
                <fullName>Weekdays Evening-WDE</fullName>
            </value>
            <value>
                <fullName>Weekends Full Day-WEF</fullName>
            </value>
            <value>
                <fullName>Weekdays Full Day-WDF</fullName>
            </value>
            <value>
                <fullName>Self-Paced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>