force-app/main/default/objects/Batch__c/fields/Training_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Start_Date__c</fullName>
    <label>Training Start Date</label>
    <type>DateTime</type>
</CustomField>