force-app/main/default/objects/Batch__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2011-2012</fullName>
            </value>
            <value>
                <fullName>2012-2013</fullName>
            </value>
            <value>
                <fullName>2013-2014</fullName>
            </value>
            <value>
                <fullName>2014-2015</fullName>
            </value>
            <value>
                <fullName>2015-2016</fullName>
            </value>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>2020-2021</fullName>
            </value>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2022-2023</fullName>
            </value>
            <value>
                <fullName>2023-2024</fullName>
            </value>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2025-2026</fullName>
            </value>
            <value>
                <fullName>2026-2027</fullName>
            </value>
            <value>
                <fullName>2027-2028</fullName>
            </value>
            <value>
                <fullName>2028-2029</fullName>
            </value>
            <value>
                <fullName>2029-2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>