force-app/main/default/objects/Batch__c/validationRules/Course_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Cannot_Be_Edited</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Course__c )</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Course cannot be edit</errorMessage>
</ValidationRule>