force-app/main/default/objects/Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Quarter__c</columns>
    <columns>Batch_Month__c</columns>
    <columns>Publish__c</columns>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Year__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Training_Start_Date__c</columns>
    <columns>Training_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>